frontserver/public/css/styles.css
* {
  margin: 0;
  padding: 0;
}

html, body {
  color: black;
  width: 100%;
  height: 100%;
  /*overflow: hidden;*/
}

/*setting background color*/
body{
  background-image: url("/image/6791702-free-cs-go-wallpaper.jpg")
}

video#bgvid {
    position: absolute;

    margin-top: -30px;
    z-index: -100;
    /*-ms-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);*/
    background-size: cover;
    transform:scale(1.2);
}

.overlay {
    position: absolute;
    top: 0;
    background-color: rgba(0, 0, 0, 0.5);
    min-width: 100%;
    min-height: 100%;
}

.container{
  /*display:none;*/
  /*position: absolute;*/
  background-color: rgba(0,0,0,0.5);
  color: white;
  margin-top: 100px;
  text-align:center;
  height: 75vh;

}

.ulelement{
  text-align:center;
}
.input-field{
  float:right;
  width:300px;
}

#logo{
  position:relative;
  float:left;
}

.page {
  margin-top: 60px;
  width: 100vw;
  float: left;
}

.slideContainer {
  height: 100vh;
  width: 300vw;
  position: relative;
  left: -100vw;
  z-index:-1;
}

.prevPage {
  height: 40vh;
}

/* LIVE STAT TAB STARTS */
.liveScoreBoard {
  height: 50vh;
  border-style: solid;
  border-radius: 1%;
  border-width: 3px;
  border-color: grey;
  color: grey;
  margin-bottom: 5vh;
}

.liveTable {
  /*background-color: blue; */
  height: 30vh;
  border-style: solid;
  border-radius: 1%;
  border-width: 3px;
  border-color: grey;
  color: grey;
  overflow-y: hidden;
}

.liveTable .liveTableTabs {
  padding-left: 5px;
  padding-right: 5px;
  background-color: transparent;
  border-radius: 5%;
  border-color: grey;
  border-style: solid;
  border-width: 1px 1px 0px 1px;
  color:grey;
}

.liveMap {
  height: 30vh;
  border-style: solid;
  border-width: 3px;
  border-color: grey;
}

.scrollTd {
  max-height: 100%;
  overflow-y: scroll;
}

.scrollTd::-webkit-scrollbar {
 display: none;
}

.fade {
  display: none;
}
/* LIVE STAT TAB ENDS HERE */

/* STATIC STAT TAB ENDS HERE */
.statTable {
  /*background-color: blue; */
  height: 80vh;
  border-style: solid;
  border-radius: 1%;
  border-width: 3px;
  border-color: grey;
  color: grey;
  overflow-y: hidden;
}

.statTable .statTableTabs {
  padding-left: 5px;
  padding-right: 5px;
  background-color: transparent;
  border-radius: 5%;
  border-color: grey;
  border-style: solid;
  border-width: 1px 1px 0px 1px;
  color:grey;
}

.statTeamIconContainer {
  height: 35vh;
  border-style: solid;
  border-width: 3px;
  border-color: grey;
  margin-bottom: 5vh;
  margin-right: 2vw;
}

.statProfileContainer {
  height: 35vh;
  border-style: solid;
  border-width: 3px;
  border-color: grey;
  margin-bottom: 5vh;
  margin-right: 2vw;
}

.statGraph {
  height: 40vh;
}
/* STATIC STAT TAB ENDS HERE */

/*@media only screen and (max-width: 768px) {
  video#bgvid {
    display: none;
  }

  #breaker {
    width: 100vw;
    height: 100vh;
  }

  .page .liveTable{
    width: 300px;
  }

  .livemap {
    width: 80vw;
    display: none;
  }

  [class*="s"] {
      width: 300px;
  }


  body{
    background-color: black;
  }
  #logo {
    font-size: 10px;
  }
  form {
    display: none;
  }
}*/

